<resources>
    <string name="app_name">FirebaseAuthenticationTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="mobile">Mobile Number</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="forgot">Forget your password?</string>


    <string name="hyperlink">Don\'t have an account? Sign Up</string>
    <string name="signup">Alerady have an account? Sign In</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>