<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/navbar"
        android:backgroundTint="#1cafff">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Amazon"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ecommerce"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="75dp"
            android:gravity="center"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@+id/navbar"
        app:cardCornerRadius="20dp"
        android:backgroundTint="@color/white"
        android:layout_marginTop="-20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register"
            android:textColor="@color/teal_700"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:textSize="25dp"
            android:textStyle="bold"
            android:id="@+id/login"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:hint="@string/name"
            app:boxStrokeColor="@color/blue"
            app:hintTextColor="@color/blue"
            android:textColorHint="@color/black"
            android:layout_marginHorizontal="25dp"
            >
            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:background="@color/white"
                android:id="@+id/name"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:hint="@string/mobile"
            app:boxStrokeColor="@color/blue"
            app:hintTextColor="@color/blue"
            android:textColorHint="@color/black"
            android:layout_marginHorizontal="25dp"
            >
            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:id="@+id/mobile"
                android:inputType="number"
                android:background="@color/white"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:hint="@string/email"
            app:boxStrokeColor="@color/blue"
            app:hintTextColor="@color/blue"
            android:textColorHint="@color/black"
            android:layout_marginHorizontal="25dp"
            >
            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:background="@color/white"
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="240dp"
            android:hint="@string/password"
            app:boxStrokeColor="@color/blue"
            app:hintTextColor="@color/blue"
            android:textColorHint="@color/black"
            android:layout_marginHorizontal="25dp"
            >
            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:background="@color/white"
                android:id="@+id/password"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="305dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Forget your password"
                android:textColor="@color/blue"
                android:layout_marginTop="15dp"
                android:id="@+id/forgot"
                android:gravity="end"/>
            <Button
                android:layout_width="match_parent"
                android:id="@+id/signup"
                android:text="SIGN UP"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/blue"
                android:textColor="@color/white"
                android:background="@drawable/btn_shap"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgot"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sign_in"
                android:text="@string/signup"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:gravity="center"
                android:layout_marginBottom="40dp"
                android:textColor="@color/blue"
                android:layout_below="@+id/signup"
                />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>